@@ -1,8 +1,9 @@
 Version 0.0.6 -- UNRELEASED
 
   * resync with libinput 1.9.4
+  * Option --help: Fix typo reported by Jakub Wilk.
   * Add option --set-tap-map from libinput 1.5
-  * --help: Fix typo reported by Jakub Wilk.
+  * Add option --no-daemon. Suggested by Yuri D'Elia.
 
 Version 0.0.5 -- 29 Jun 2017
 
